--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -369,90 +369,24 @@ title: TheBottle
 		</div>
 		<!-- categories END -->
 
-		<!-- overlay BEGIN -->
-		<div class="overlay js-overlay"></div>
-		<!-- overlay END -->
-
-		<!-- popup BEIGN -->
-		<div class="popup popup-aside">
-			<div class="popup__content">
-				<div class="basket">
-					<div class="basket__title">
-						<p>корзина (<span>2</span>)</p>
-						<a href="#" class="basket__close">
-							<i class="icon icon-close"></i>
-						</a>
-					</div>
-					<div class="basket__scroll">
-						<div class="basket__item">
-							<div class="row-item">
-								<div class="row-item__img">
-									<img src="img/basket-img-00.png" alt="img">
-								</div>
-								<div class="row-item__content">
-									<div class="row-item__title">Johnnie Walker Red Rye Finish, 1 л</div>
-									<div class="row-item__category">Виски</div>
-									<div class="row-item__quantity">
-										<span>Количество:</span>
-										<div class="row-item__select">
-											<select class="select">
-												<option>1</option>
-												<option>2</option>
-												<option>3</option>
-											</select>
-										</div>
-									</div>
-									<div class="row-item__price"><span>750</span> грн</div>
-								</div>
-							</div>
-							<div class="row-item">
-								<div class="row-item__img">
-									<img src="img/basket-img-01.png" alt="img">
-								</div>
-								<div class="row-item__content">
-									<div class="row-item__title">Johnnie Walker Red Rye Finish, 1 л</div>
-									<div class="row-item__category">Виски</div>
-									<div class="row-item__quantity">
-										<span>Количество:</span>
-										<div class="row-item__select">
-											<select class="select">
-												<option>1</option>
-												<option>2</option>
-												<option>3</option>
-											</select>
-										</div>
-									</div>
-									<div class="row-item__price"><span>750</span> грн</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="basket__bottom">
-						<div class="basket__price">
-							<div class="basket__price_left"><span>итого:</span></div>
-							<div class="basket__price_right"><span>3 250 грн</span></div>
-						</div>
-						<div class="basket__btn">
-							<a href="#" class="btn btn_block btn_large">оформить заказ</a>
-							<a href="#" class="btn btn_block btn_large btn_transparent">продолжить покупки</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- popup END -->
-
 		<!-- btn-top BEGIN -->
 		<a href=".js-body" class="btn-top js-scroll-to"><i class="icon icon-arrow-top"></i></a>
 		<!-- btn-top END -->
 
+		{% include "partials/_basket-modal.html" %}
 		{% include "partials/_footer.html" %}
 	</div>
 
 	<!-- script begin -->
 	<script src="js/vendor/jquery-3.1.1.min.js"></script>
+	<script src="js/vendor/perfect-scrollbar.min.js"></script>
+	<script src="js/vendor/perfect-scrollbar.min.js"></script>
+	<script src="js/vendor/select2.min.js"></script>
 	<script src="js/vendor/slick.min.js"></script>
 	<script src="js/app.js"></script>
+	<script>
+		const ps = new PerfectScrollbar('.scrollbar');
+	</script>
 	<!-- script end -->
 
 </body>
