--- a/src/templates/ordering.html
+++ b/src/templates/ordering.html
@@ -32,7 +32,7 @@ title: ordering
 						</div>
 					</div>
 					<div class="cart__body">
-						<div class="cart__scroll">
+						<div class="cart__scroll scrollbar">
 							<div class="cart__item">
 								<div class="cart__col cart__product">
 									<div class="cart__img">
@@ -46,11 +46,14 @@ title: ordering
 								</div>
 								<div class="cart__col cart__price"><span class="cart__value">1 375 грн</span></div>
 								<div class="cart__col cart__qua">
-									<select class="select cart__select">
-										<option>0.7 литров</option>
-										<option>1 литр</option>
-										<option>2 литра</option>
-									</select>
+									<span class="label">Количество</span>
+									<div class="cart__select">
+										<select class="select js-select" style="width: 100%;">
+											<option>0.7 литров</option>
+											<option>1 литр</option>
+											<option>2 литра</option>
+										</select>
+									</div>
 								</div>
 								<div class="cart__col cart__amount"><span class="cart__value">2 750 грн</span></div>
 							</div>
@@ -67,11 +70,14 @@ title: ordering
 								</div>
 								<div class="cart__col cart__price"><span class="cart__value">1 375 грн</span></div>
 								<div class="cart__col cart__qua">
-									<select class="select cart__select">
-										<option>0.7 литров</option>
-										<option>1 литр</option>
-										<option>2 литра</option>
-									</select>
+									<span class="label">Количество</span>
+									<div class="cart__select">
+										<select class="select js-select" style="width: 100%;">
+											<option>0.7 литров</option>
+											<option>1 литр</option>
+											<option>2 литра</option>
+										</select>
+									</div>
 								</div>
 								<div class="cart__col cart__amount"><span class="cart__value">2 750 грн</span></div>
 							</div>
@@ -88,11 +94,14 @@ title: ordering
 								</div>
 								<div class="cart__col cart__price"><span class="cart__value">1 375 грн</span></div>
 								<div class="cart__col cart__qua">
-									<select class="select cart__select">
-										<option>0.7 литров</option>
-										<option>1 литр</option>
-										<option>2 литра</option>
-									</select>
+									<span class="label">Количество</span>
+									<div class="cart__select">
+										<select class="select js-select" style="width: 100%;">
+											<option>0.7 литров</option>
+											<option>1 литр</option>
+											<option>2 литра</option>
+										</select>
+									</div>
 								</div>
 								<div class="cart__col cart__amount"><span class="cart__value">2 750 грн</span></div>
 							</div>
@@ -109,11 +118,14 @@ title: ordering
 								</div>
 								<div class="cart__col cart__price"><span class="cart__value">1 375 грн</span></div>
 								<div class="cart__col cart__qua">
-									<select class="select cart__select">
-										<option>0.7 литров</option>
-										<option>1 литр</option>
-										<option>2 литра</option>
-									</select>
+									<span class="label">Количество</span>
+									<div class="cart__select">
+										<select class="select js-select" style="width: 100%;">
+											<option>0.7 литров</option>
+											<option>1 литр</option>
+											<option>2 литра</option>
+										</select>
+									</div>
 								</div>
 								<div class="cart__col cart__amount"><span class="cart__value">2 750 грн</span></div>
 							</div>
@@ -195,19 +207,23 @@ title: ordering
 							<div class="col col-6 col-xs-12 form__col">
 								<div class="form-item">
 									<div class="form-item__title">Город</div>
-									<select class="select select_lg">
-										<option>Киев</option>
-										<option>Одесса</option>
-										<option>Харьков</option>
-									</select>
+									<div class="select_lg">
+										<select class="select js-select" style="width: 100%;">
+											<option>Киев</option>
+											<option>Одесса</option>
+											<option>Харьков</option>
+										</select>
+									</div>
 								</div>
 								<div class="form-item">
 									<div class="form-item__title">Варианты доставки</div>
-									<select class="select select_lg">
-										<option>Бесплатно курьером</option>
-										<option>Платно курьером</option>
-										<option>Платно</option>
-									</select>
+									<div class="select_lg">
+										<select class="select js-select" style="width: 100%;">
+											<option>Бесплатно курьером</option>
+											<option>Платно курьером</option>
+											<option>Платно</option>
+										</select>
+									</div>
 								</div>
 								<div class="form-item">
 									<div class="form-item__title">Улица</div>
@@ -237,19 +253,23 @@ title: ordering
 							<div class="col col-6 col-xs-12 form__col">
 								<div class="form-item">
 									<div class="form-item__title">Варианты доставки</div>
-									<select class="select select_lg">
-										<option>Бесплатно курьером</option>
-										<option>Платно курьером</option>
-										<option>Платно</option>
-									</select>
+									<div class="select_lg">
+										<select class="select js-select" style="width: 100%;">
+											<option>Бесплатно курьером</option>
+											<option>Платно курьером</option>
+											<option>Платно</option>
+										</select>
+									</div>
 								</div>
 								<div class="form-item">
 									<div class="form-item__title">Варианты доставки</div>
-									<select class="select select_lg">
-										<option>Бесплатно курьером</option>
-										<option>Платно курьером</option>
-										<option>Платно</option>
-									</select>
+									<div class="select_lg">
+										<select class="select js-select" style="width: 100%;">
+											<option>Бесплатно курьером</option>
+											<option>Платно курьером</option>
+											<option>Платно</option>
+										</select>
+									</div>
 								</div>
 								<div class="form-item">
 									<div class="form-item__title">Текст комментария</div>
@@ -308,10 +328,10 @@ title: ordering
 			</div>
 		</div>
 		<!-- popup BEGIN -->
-		<div class="popup">
+		<div class="popup js-modal" data-modal="comment">
 			<div class="inner popup__inner popup__inner_md">
 				<div class="popup__content popup__content_center">
-					<a href="#" class="btn-close"><i class="icon icon-close"></i></a>
+					<a href="#" class="btn-close js-modal-control" data-target"comment"><i class="icon icon-close"></i></a>
 					<div class="popup__title">Спасибо за заказ!</div>
 					<p>Все наши служны уже работают над Вашим заказом. <br /> В ближайшее время с Вами свяжется менеджер, чтобы обсудить все детали покупки. Отличного Вам настроения!
 					</p>
@@ -327,7 +347,12 @@ title: ordering
 	<!-- script begin -->
 	<script src="js/vendor/jquery-3.1.1.min.js"></script>
 	<script src="js/vendor/slick.min.js"></script>
+	<script src="js/vendor/perfect-scrollbar.min.js"></script>
+	<script src="js/vendor/select2.min.js"></script>
 	<script src="js/app.js"></script>
+	<script>
+		const ps = new PerfectScrollbar('.scrollbar');
+	</script>
 	<!-- script end -->
 
 </body>
