--- a/src/templates/partials/_head.html
+++ b/src/templates/partials/_head.html
@@ -9,5 +9,7 @@
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
 	<!-- Libs stylesheet -->
+	<link rel="stylesheet" media="all" href="css/perfect-scrollbar.css">
+	<link rel="stylesheet" media="all" href="css/select2.min.css">
 	<link rel="stylesheet" media="all" href="css/style.min.css">
 </head>
