--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -50,63 +50,63 @@ title: about
 						Отзывы и оценки покупателей
 						<p>Наши покупатели оставили <strong>3 715</strong> отзывов и поставили более <strong>12 839</strong> оценок различным напиткам.</p>
 					</div>
-					<div class="row">
-						<div class="col col-6 col-xs-12">
-							<div class="review">
-								<div class="review__name">Дмитрий Чупрун</div>
-								<ul class="rate">
-									<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
-									<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
-									<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
-									<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
-									<li><a href="#"><i class="icon icon-star"></i></a></li>
-								</ul>
-								<p class="review__text">Один из лучших виски. Люблю пробовать новое. Но регулярно возвращаюсь к старине Джеку</p>
-								<div class="review__data">25.05.2017</div>
+					<div class="reviews__slider">
+						<div class="js-slider-reviews">
+							<div class="slider-item">
+								<div class="review">
+									<div class="review__name">Дмитрий Чупрун</div>
+									<ul class="rate">
+										<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
+										<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
+										<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
+										<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
+										<li><a href="#"><i class="icon icon-star"></i></a></li>
+									</ul>
+									<p class="review__text">Один из лучших виски. Люблю пробовать новое. Но регулярно возвращаюсь к старине Джеку</p>
+									<div class="review__data">25.05.2017</div>
+								</div>
 							</div>
-						</div>
-						<div class="col col-6 col-xs-12">
-							<div class="review">
-								<div class="review__name">Дмитрий Чупрун</div>
-								<ul class="rate">
-									<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
-									<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
-									<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
-									<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
-									<li><a href="#"><i class="icon icon-star"></i></a></li>
-								</ul>
-								<p class="review__text">Перебор с медом - сделали какой-то ликер из хорошего вискаря. Имхо, конечно, но в хороший кофе я бы его точно не добавлял. М.б. это американская мода ... <a href="#">Читать далее</a></p>
-								<div class="review__data">25.05.2017</div>
+							<div class="slider-item">
+								<div class="review">
+									<div class="review__name">Дмитрий Чупрун</div>
+									<ul class="rate">
+										<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
+										<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
+										<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
+										<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
+										<li><a href="#"><i class="icon icon-star"></i></a></li>
+									</ul>
+									<p class="review__text">Перебор с медом - сделали какой-то ликер из хорошего вискаря. Имхо, конечно, но в хороший кофе я бы его точно не добавлял. М.б. это американская мода ... <a href="#">Читать далее</a></p>
+									<div class="review__data">25.05.2017</div>
+								</div>
 							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col col-6 col-xs-12">
-							<div class="review">
-								<div class="review__name">Дмитрий Чупрун</div>
-								<ul class="rate">
-									<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
-									<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
-									<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
-									<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
-									<li><a href="#"><i class="icon icon-star"></i></a></li>
-								</ul>
-								<p class="review__text">Один из лучших виски. Люблю пробовать новое. Но регулярно возвращаюсь к старине Джеку</p>
-								<div class="review__data">25.05.2017</div>
+							<div class="slider-item">
+								<div class="review">
+									<div class="review__name">Дмитрий Чупрун</div>
+									<ul class="rate">
+										<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
+										<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
+										<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
+										<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
+										<li><a href="#"><i class="icon icon-star"></i></a></li>
+									</ul>
+									<p class="review__text">Один из лучших виски. Люблю пробовать новое. Но регулярно возвращаюсь к старине Джеку</p>
+									<div class="review__data">25.05.2017</div>
+								</div>
 							</div>
-						</div>
-						<div class="col col-6 col-xs-12">
-							<div class="review">
-								<div class="review__name">Дмитрий Чупрун</div>
-								<ul class="rate">
-									<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
-									<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
-									<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
-									<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
-									<li><a href="#"><i class="icon icon-star"></i></a></li>
-								</ul>
-								<p class="review__text">Перебор с медом - сделали какой-то ликер из хорошего вискаря. Имхо, конечно, но в хороший кофе я бы его точно не добавлял. М.б. это американская мода ... <a href="#">Читать далее</a></p>
-								<div class="review__data">25.05.2017</div>
+							<div class="slider-item">
+								<div class="review">
+									<div class="review__name">Дмитрий Чупрун</div>
+									<ul class="rate">
+										<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
+										<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
+										<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
+										<li class="active"><a href="#"><i class="icon icon-star"></i></a></li>
+										<li><a href="#"><i class="icon icon-star"></i></a></li>
+									</ul>
+									<p class="review__text">Перебор с медом - сделали какой-то ликер из хорошего вискаря. Имхо, конечно, но в хороший кофе я бы его точно не добавлял. М.б. это американская мода ... <a href="#">Читать далее</a></p>
+									<div class="review__data">25.05.2017</div>
+								</div>
 							</div>
 						</div>
 					</div>
