--- a/src/templates/cart.html
+++ b/src/templates/cart.html
@@ -45,11 +45,14 @@ title: cart
 							</div>
 							<div class="cart__col cart__price"><span class="cart__value">1 375 грн</span></div>
 							<div class="cart__col cart__qua">
-								<select class="select cart__select">
-									<option>0.7 литров</option>
-									<option>1 литр</option>
-									<option>2 литра</option>
-								</select>
+								<span class="label">Количество</span>
+								<div class="cart__select">
+									<select class="select js-select" style="width: 100%">
+										<option>0.7 литров</option>
+										<option>1 литр</option>
+										<option>2 литра</option>
+									</select>
+								</div>
 							</div>
 							<div class="cart__col cart__amount"><span class="cart__value">2 750 грн</span></div>
 						</div>
@@ -66,11 +69,14 @@ title: cart
 							</div>
 							<div class="cart__col cart__price"><span class="cart__value">1 375 грн</span></div>
 							<div class="cart__col cart__qua">
-								<select class="select cart__select">
-									<option>0.7 литров</option>
-									<option>1 литр</option>
-									<option>2 литра</option>
-								</select>
+								<span class="label">Количество</span>
+								<div class="cart__select">
+									<select class="select js-select" style="width: 100%">
+										<option>0.7 литров</option>
+										<option>1 литр</option>
+										<option>2 литра</option>
+									</select>
+								</div>
 							</div>
 							<div class="cart__col cart__amount"><span class="cart__value">2 750 грн</span></div>
 						</div>
@@ -87,11 +93,14 @@ title: cart
 							</div>
 							<div class="cart__col cart__price"><span class="cart__value">1 375 грн</span></div>
 							<div class="cart__col cart__qua">
-								<select class="select cart__select">
-									<option>0.7 литров</option>
-									<option>1 литр</option>
-									<option>2 литра</option>
-								</select>
+								<span class="label">Количество</span>
+								<div class="cart__select">
+									<select class="select js-select" style="width: 100%">
+										<option>0.7 литров</option>
+										<option>1 литр</option>
+										<option>2 литра</option>
+									</select>
+								</div>
 							</div>
 							<div class="cart__col cart__amount"><span class="cart__value">2 750 грн</span></div>
 						</div>
@@ -108,11 +117,14 @@ title: cart
 							</div>
 							<div class="cart__col cart__price"><span class="cart__value">1 375 грн</span></div>
 							<div class="cart__col cart__qua">
-								<select class="select cart__select">
-									<option>0.7 литров</option>
-									<option>1 литр</option>
-									<option>2 литра</option>
-								</select>
+								<span class="label">Количество</span>
+								<div class="cart__select">
+									<select class="select js-select" style="width: 100%">
+										<option>0.7 литров</option>
+										<option>1 литр</option>
+										<option>2 литра</option>
+									</select>
+								</div>
 							</div>
 							<div class="cart__col cart__amount"><span class="cart__value">2 750 грн</span></div>
 						</div>
@@ -141,6 +153,7 @@ title: cart
 	<!-- script begin -->
 	<script src="js/vendor/jquery-3.1.1.min.js"></script>
 	<script src="js/vendor/slick.min.js"></script>
+	<script src="js/vendor/select2.min.js"></script>
 	<script src="js/app.js"></script>
 	<!-- script end -->
 
