--- a/src/templates/subcategory.html
+++ b/src/templates/subcategory.html
@@ -29,130 +29,182 @@ title: subcategory
 
 		<!-- subcategory BEGIN -->
 		<div class="subcategory">
+			<div class="subcategory__btns">
+				<div class="inner">
+					<div class="row">
+						<div class="col col-sm-12">
+							<a href="#" class="subcategory__btn js-modal-control" data-target="filters">Фильтр</a>
+							<a href="#" class="subcategory__btn js-filter-btn">Сортировка</a>
+						</div>
+					</div>
+				</div>
+			</div>
 			<div class="inner">
 				<div class="row">
 					<div class="col col-3 col-sm-12">
-						<aside class="aside">
-							<div class="aside__title">Выбрать виски</div>
-							<div class="filter">
-								<div class="filter__title"><a href="#">Объем</a></div>
-								<div class="filter__checkboxes">
-									<div class="filter__item">
-										<label class="checkbox">
-											<input type="radio" name="amount">
-											<span class="checkbox__text">Все объемы</span>
-											<span class="checkbox__icon"></span>
-										</label>
-									</div>
-									<div class="filter__item">
-										<label class="checkbox">
-											<input type="radio" name="amount">
-											<span class="checkbox__text">0.5 л</span>
-											<span class="checkbox__icon"></span>
-										</label>
-									</div>
-									<div class="filter__item">
-										<label class="checkbox">
-											<input type="radio" name="amount">
-											<span class="checkbox__text">0.75 л</span>
-											<span class="checkbox__icon"></span>
-										</label>
-									</div>
-									<div class="filter__item">
-										<label class="checkbox">
-											<input type="radio" name="amount">
-											<span class="checkbox__text">1 л</span>
-											<span class="checkbox__icon"></span>
-										</label>
-									</div>
-									<div class="filter__btn">
-										<a href="#">
-											<span class="filter__icon"></span>
-											<span class="filter__text">Ещё</span>
-										</a>
+						<aside class="aside js-modal" data-modal="filters">
+							<div class="aside__wrapper js-modal-prevent">
+								<div class="aside__title">Выбрать виски <a href="#" class="aside__btn js-modal-control" data-target="filters"><i class="icon icon-close"></i></a></div>
+								<div class="aside__body">
+									<div class="aside__scroll">
+										<div class="filter js-accordion is-active">
+											<div class="filter__title"><a href="#" class="js-accordion-btn">Объем</a></div>
+											<div class="filter__checkboxes js-accordion-item">
+												<div class="filter__item">
+													<label class="checkbox">
+														<input type="radio" name="amount">
+														<span class="checkbox__text">Все объемы</span>
+														<span class="checkbox__icon"></span>
+													</label>
+												</div>
+												<div class="filter__item">
+													<label class="checkbox">
+														<input type="radio" name="amount">
+														<span class="checkbox__text">0.5 л</span>
+														<span class="checkbox__icon"></span>
+													</label>
+												</div>
+												<div class="filter__item">
+													<label class="checkbox">
+														<input type="radio" name="amount">
+														<span class="checkbox__text">0.75 л</span>
+														<span class="checkbox__icon"></span>
+													</label>
+												</div>
+												<div class="filter__item">
+													<label class="checkbox">
+														<input type="radio" name="amount">
+														<span class="checkbox__text">1 л</span>
+														<span class="checkbox__icon"></span>
+													</label>
+												</div>
+												<div class="filter__btn">
+													<a href="#">
+														<span class="filter__icon"></span>
+														<span class="filter__text">Ещё</span>
+													</a>
+												</div>
+											</div>
+										</div>
+										<div class="filter js-accordion is-active">
+											<div class="filter__title"><a href="#" class="js-accordion-btn">вкус</a></div>
+											<div class="filter__checkboxes js-accordion-item">
+												<div class="filter__item">
+													<label class="checkbox">
+														<input type="radio" name="amount1">
+														<span class="checkbox__text">Все вкусы</span>
+														<span class="checkbox__icon"></span>
+													</label>
+												</div>
+												<div class="filter__item">
+													<label class="checkbox">
+														<input type="radio" name="amount1">
+														<span class="checkbox__text">Вишня<span>12</span></span>
+														<span class="checkbox__icon"></span>
+													</label>
+												</div>
+												<div class="filter__item">
+													<label class="checkbox">
+														<input type="radio" name="amount1">
+														<span class="checkbox__text">Шоколад</span>
+														<span class="checkbox__icon"></span>
+													</label>
+												</div>
+												<div class="filter__item">
+													<label class="checkbox">
+														<input type="radio" name="amount1">
+														<span class="checkbox__text">Яблоко</span>
+														<span class="checkbox__icon"></span>
+													</label>
+												</div>
+												<div class="filter__btn">
+													<a href="#">
+														<span class="filter__icon"></span>
+														<span class="filter__text">Ещё</span>
+													</a>
+												</div>
+											</div>
+										</div>
+										<div class="filter js-accordion is-active">
+											<div class="filter__title"><a href="#" class="js-accordion-btn">тип</a></div>
+											<div class="filter__checkboxes js-accordion-item">
+												<div class="filter__item">
+													<label class="checkbox">
+														<input type="radio" name="amount2">
+														<span class="checkbox__text">Любой тип виски</span>
+														<span class="checkbox__icon"></span>
+													</label>
+												</div>
+												<div class="filter__item">
+													<label class="checkbox">
+														<input type="radio" name="amount2">
+														<span class="checkbox__text">Односолодовый</span>
+														<span class="checkbox__icon"></span>
+													</label>
+												</div>
+												<div class="filter__item">
+													<label class="checkbox">
+														<input type="radio" name="amount2">
+														<span class="checkbox__text">Купажированный</span>
+														<span class="checkbox__icon"></span>
+													</label>
+												</div>
+												<div class="filter__item">
+													<label class="checkbox">
+														<input type="radio" name="amount2">
+														<span class="checkbox__text">Бурбон</span>
+														<span class="checkbox__icon"></span>
+													</label>
+												</div>
+												<div class="filter__btn">
+													<a href="#">
+														<span class="filter__icon"></span>
+														<span class="filter__text">Ещё</span>
+													</a>
+												</div>
+											</div>
+										</div>
+										<div class="filter js-accordion">
+											<div class="filter__title"><a href="#" class="js-accordion-btn">сочетание</a></div>
+											<div class="filter__checkboxes js-accordion-item">
+												<div class="filter__item">
+													<label class="checkbox">
+														<input type="radio" name="amount2">
+														<span class="checkbox__text">Любой тип виски</span>
+														<span class="checkbox__icon"></span>
+													</label>
+												</div>
+												<div class="filter__item">
+													<label class="checkbox">
+														<input type="radio" name="amount2">
+														<span class="checkbox__text">Односолодовый</span>
+														<span class="checkbox__icon"></span>
+													</label>
+												</div>
+												<div class="filter__item">
+													<label class="checkbox">
+														<input type="radio" name="amount2">
+														<span class="checkbox__text">Купажированный</span>
+														<span class="checkbox__icon"></span>
+													</label>
+												</div>
+												<div class="filter__item">
+													<label class="checkbox">
+														<input type="radio" name="amount2">
+														<span class="checkbox__text">Бурбон</span>
+														<span class="checkbox__icon"></span>
+													</label>
+												</div>
+												<div class="filter__btn">
+													<a href="#">
+														<span class="filter__icon"></span>
+														<span class="filter__text">Ещё</span>
+													</a>
+												</div>
+											</div>
+										</div>
 									</div>
 								</div>
-							</div>
-							<div class="filter">
-								<div class="filter__title"><a href="#">вкус</a></div>
-								<div class="filter__checkboxes">
-									<div class="filter__item">
-										<label class="checkbox">
-											<input type="radio" name="amount1">
-											<span class="checkbox__text">Все вкусы</span>
-											<span class="checkbox__icon"></span>
-										</label>
-									</div>
-									<div class="filter__item">
-										<label class="checkbox">
-											<input type="radio" name="amount1">
-											<span class="checkbox__text">Вишня<span>12</span></span>
-											<span class="checkbox__icon"></span>
-										</label>
-									</div>
-									<div class="filter__item">
-										<label class="checkbox">
-											<input type="radio" name="amount1">
-											<span class="checkbox__text">Шоколад</span>
-											<span class="checkbox__icon"></span>
-										</label>
-									</div>
-									<div class="filter__item">
-										<label class="checkbox">
-											<input type="radio" name="amount1">
-											<span class="checkbox__text">Яблоко</span>
-											<span class="checkbox__icon"></span>
-										</label>
-									</div>
-									<div class="filter__btn">
-										<a href="#">
-											<span class="filter__icon"></span>
-											<span class="filter__text">Ещё</span>
-										</a>
-									</div>
-								</div>
-							</div>
-							<div class="filter">
-								<div class="filter__title"><a href="#">тип</a></div>
-								<div class="filter__checkboxes">
-									<div class="filter__item">
-										<label class="checkbox">
-											<input type="radio" name="amount2">
-											<span class="checkbox__text">Любой тип виски</span>
-											<span class="checkbox__icon"></span>
-										</label>
-									</div>
-									<div class="filter__item">
-										<label class="checkbox">
-											<input type="radio" name="amount2">
-											<span class="checkbox__text">Односолодовый</span>
-											<span class="checkbox__icon"></span>
-										</label>
-									</div>
-									<div class="filter__item">
-										<label class="checkbox">
-											<input type="radio" name="amount2">
-											<span class="checkbox__text">Купажированный</span>
-											<span class="checkbox__icon"></span>
-										</label>
-									</div>
-									<div class="filter__item">
-										<label class="checkbox">
-											<input type="radio" name="amount2">
-											<span class="checkbox__text">Бурбон</span>
-											<span class="checkbox__icon"></span>
-										</label>
-									</div>
-									<div class="filter__btn">
-										<a href="#">
-											<span class="filter__icon"></span>
-											<span class="filter__text">Ещё</span>
-										</a>
-									</div>
-								</div>
-							</div>
-							<div class="filter">
-								<div class="filter__title"><a href="#">сочетание</a></div>
 							</div>
 						</aside>
 					</div>
@@ -160,7 +212,7 @@ title: subcategory
 						<div class="subcategory_right">
 							<div class="row">
 								<div class="col col-12">
-									<div class="sorting">
+									<div class="sorting js-filter-item">
 										<div class="sorting__title">сортировка по:</div>
 										<ul class="sorting__list">
 											<li><a href="#" class="animation-line">названию</a></li>
